--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,6 @@
-MONGODB_URI= mongodb+srv://singhraspreet921:raspreetxyz@cluster0.agwvzej.mongodb.net
+MONGODB_URI = mongodb+srv://singhraspreet921:raspreetxyz@cluster0.agwvzej.mongodb.net
 
 # Clerk keys
-CLERK_PUBLISHABLE_KEY=YOUR_PUBLISHABLE_KEY
-CLERK_SECRET_KEY=YOUR_SECRET_KEY
-CLERK_WEBHOOK_SECRET=whsec_cJJ8REm9xotl1QafD7YfagY3M7fUj2xI
+CLERK_PUBLISHABLE_KEY = pk_test_d2lzZS1tb25rZXktOTQuY2xlcmsuYWNjb3VudHMuZGV2JA
+CLERK_SECRET_KEY = sk_test_wDEnpgGSIrSNVLxJEkYCyU85AGwT8b0MnjPOXPkEWJ
+CLERK_WEBHOOK_SECRET = whsec_cJJ8REm9xotl1QafD7YfagY3M7fUj2xI
