--- a/server/.env
+++ b/server/.env
@@ -4,3 +4,8 @@ MONGODB_URI = mongodb+srv://singhraspreet921:raspreetxyz@cluster0.agwvzej.mongod
 CLERK_PUBLISHABLE_KEY = pk_test_d2lzZS1tb25rZXktOTQuY2xlcmsuYWNjb3VudHMuZGV2JA
 CLERK_SECRET_KEY = sk_test_wDEnpgGSIrSNVLxJEkYCyU85AGwT8b0MnjPOXPkEWJ
 CLERK_WEBHOOK_SECRET = whsec_cJJ8REm9xotl1QafD7YfagY3M7fUj2xI
+
+# Cloudinary
+CLOUDINARY_CLOUD_NAME = dc0350ekg
+CLOUDINARY_API_KEY = 196766593661843
+CLOUDINARY_API_SECRET = E29pmOAjAXfAC_cTQJGyOMRfKmQ
