--- a/client/.env
+++ b/client/.env
@@ -1,1 +1,3 @@
 VITE_CLERK_PUBLISHABLE_KEY=pk_test_d2lzZS1tb25rZXktOTQuY2xlcmsuYWNjb3VudHMuZGV2JA
+VITE_BACKEND_URL=http://localhost:3000
+VITE_CURRENCY=
